<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".lenguyenminhthao_k224111462_k22411c.ProductDetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product_detail"
                android:textAlignment="center"
                android:textColor="#1E2CE9"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product_id"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edt_product_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product_name"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edt_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product_code"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edt_product_code"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:inputType="textMultiLine"
                android:minLines="3" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_product_unit_price"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="bold" />
            <EditText
                android:id="@+id/edt_product_unit_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="16dp">

                <Button
                    android:id="@+id/btnNew"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_new"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_save"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/btnRemove"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/title_remove"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>